kanban-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec: 
  replicas: 1
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      name: kanban-app
      labels: 
        name: backend
    spec: 
      containers: 
        - name: backend-container
          image: wkrzywiec/kanban-app:k8s
          ports:
          - containerPort: 8080
