postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec: 
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      name: postgres-bdd
      labels: 
        name: postgres
    spec: 
      containers: 
        - name: postgres-container
          image: postgres:9.6-alpine
          ports:
          - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
