adminer-svc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: adminer
spec:
  ports: 
    - port: 8080
      targetPort: 8080
  selector:
    name: admin
