kanban-app-svc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: kanban-app
spec:
  ports: 
    - port: 8080
      targetPort: 8080
  selector:
    name: backend
