kanban-ui-svc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: kanban-ui
spec:
  ports: 
    - port: 80
      targetPort: 80
  selector:
    name: frontend
