postgres-svc.yaml
apiVersion: v1 
kind: Service
metadata:
  name: postgres
spec:
  ports: 
    - port: 5432
      targetPort: 5432
  selector:
    name: postgres
